Add angular FireStorage

--- a/angular.json
+++ b/angular.json
@@ -112,6 +112,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "input-type-demo:build:production",
+            "firebaseProject": "file-upload-crud",
+            "firebaseHostingSite": "file-upload-crud"
+          }
         }
       }
     }
